--- a/src/shared/search-bar.css
+++ b/src/shared/search-bar.css
@@ -1,10 +1,9 @@
-.search__bar{
-    padding: 0.5rem 1rem;
-    border-radius: 50px;
-    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
-    width: max-content;
-    margin-top: 50px;
+.search__bar {
+  flex-wrap: wrap;
+  overflow-x: hidden;
+  max-width: 100%;
 }
+
 
 .form__group span{
     font-size: 1.8rem;
