--- a/src/shared/tour-card.css
+++ b/src/shared/tour-card.css
@@ -88,3 +88,7 @@
 .booking__btn a:hover{
     color: #fff;
 }
+
+.tour__card {
+  width: 100%;
+}
